# log-sdk-py

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
datanadhi/: __init__.py  main.py
datanadhi/async_processing/: __init__.py  drain_worker.py  health.py  processor.py  queue.py
datanadhi/config/: __init__.py  builder.py  resolved.py
datanadhi/echopost/: __init__.py  binary.py  core.py
datanadhi/echopost/grpc/: logagent.proto  logagent_pb2.py  logagent_pb2_grpc.py
datanadhi/logger/: __init__.py  context.py  handler.py  json_formatter.py
datanadhi/rules/: __init__.py  config.py  core.py  data_model.py  engine.py
datanadhi/server/: __init__.py  fallback.py  primary.py
datanadhi/utils/: config.py  files.py  general.py  server.py
datanadhi/utils/config/: __init__.py  builder.py  resolved.py
datanadhi/utils/echopost/: __init__.py  binary.py
datanadhi/utils/rules/: __init__.py  config.py  engine.py
